--- a/globalStyles.css
+++ b/globalStyles.css
@@ -1,89 +1,113 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
-body {
+html, body {
     width: 100vw;
     height: 100vh;
     margin: 0;
     padding: 0;
-    background-color:black;
+    background-color: #232931;
     font-family: 'Roboto Mono', monospace;
 }
 .cardHolder {
     height: 100vh;
     display: grid;
-    column-gap: 2rem;
-    row-gap: 1rem;
     justify-content: center;
+    justify-items: center;
     align-items: center;
-    grid-template-columns: repeat(4, 20rem);
+    grid-template-columns: repeat(4, 25vw);
 }
 .card {
-    width: 20rem;
+    overflow:hidden;
+    display:inline-block;
+    background: #EEEEEE;
+    background-repeat:space;
+    width: 35svh;
     aspect-ratio: 5/7;
-    transition: 400ms;
-    /* min-width: 20rem;
-    max-width: 50rem; */
+    transition: 500ms;
+    border: none;
+}
+.card > *:not(.cardGradient) {
+    margin-left: 1rem;
+}
+.card > h1 {
+    text-shadow: -1px 1px 0 green,
+                  1px 1px 0 green,
+                  1px -1px 0 green,
+                 -1px -1px 0 green;
+}
+.cardGradient {
+    
+    border-radius: inherit;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(45deg, #4ECCA3 0%, #EEEEEE 33%);
+    background-size: 200%;
+    background-position: -10rem 10rem;
+    background-repeat:no-repeat;
+    transition: background-position 500ms;
 }
 .card:hover {
-    scale: 1.3;
+    z-index: 1;
 }
-.card:active {
-    scale: 1.2;
+.card:hover .cardGradient {
+    background-position: 0 0;
 }
-
-#A:hover {
-    transform: translateX(5vw);
-}
-.cardHolder:has(#A:hover) #B {
-    transform: translateX(8vw);
-}
-.cardHolder:has(#A:hover) #C {
-    transform: translateX(-5vw);
-}
-.cardHolder:has(#A:hover) #D {
-    transform: translateX(-18vw);
-}
-
-.cardHolder:has(#B:hover) #A {
-    transform: translateX(-3vw);
-}
-.cardHolder:has(#B:hover) #C {
-    transform: translateX(5vw);
-}
-.cardHolder:has(#B:hover) #D {
-    transform: translateX(-8vw);
-}
-
-.cardHolder:has(#C:hover) #A {
-    transform: translateX(8vw);
-}
-.cardHolder:has(#C:hover) #B {
-    transform: translateX(-5vw);
-}
-.cardHolder:has(#C:hover) #D {
-    transform: translateX(3vw);
-}
-
-#D:hover {
-    transform: translateX(-5vw);
-}
-.cardHolder:has(#D:hover) #C {
-    transform: translateX(-8vw);
-}
-.cardHolder:has(#D:hover) #B {
-    transform: translateX(5vw);
-}
-.cardHolder:has(#D:hover) #A {
-    transform: translateX(18vw);
-}
-/* 
-@media (max-width: 92rem)
-{
-    .cardHolder {
-        grid-template-columns: repeat(2, 20rem);
+/* Horizontal Devices */
+@media (min-aspect-ratio: 1.3/1) {
+    .card:hover {
+        scale: 1.3;
     }
-} */
-@media (max-width: 92rem) {
+    .card:active {
+        scale: 1.2;
+    }
+    #A:hover {
+        transform: translateX(5vw);
+    }
+    .cardHolder:has(#A:hover) #B {
+        transform: translateX(8vw);
+    }
+    .cardHolder:has(#A:hover) #C {
+        transform: translateX(-5vw);
+    }
+    .cardHolder:has(#A:hover) #D {
+        transform: translateX(-18vw);
+    }
+    
+    .cardHolder:has(#B:hover) #A {
+        transform: translateX(-3vw);
+    }
+    .cardHolder:has(#B:hover) #C {
+        transform: translateX(5vw);
+    }
+    .cardHolder:has(#B:hover) #D {
+        transform: translateX(-8vw);
+    }
+    
+    .cardHolder:has(#C:hover) #A {
+        transform: translateX(8vw);
+    }
+    .cardHolder:has(#C:hover) #B {
+        transform: translateX(-5vw);
+    }
+    .cardHolder:has(#C:hover) #D {
+        transform: translateX(3vw);
+    }
+    
+    #D:hover {
+        transform: translateX(-5vw);
+    }
+    .cardHolder:has(#D:hover) #C {
+        transform: translateX(-8vw);
+    }
+    .cardHolder:has(#D:hover) #B {
+        transform: translateX(5vw);
+    }
+    .cardHolder:has(#D:hover) #A {
+        transform: translateX(18vw);
+    }
+}
+/* Vertical Devices */
+@media (max-aspect-ratio: 1.3/1) {
     .cardHolder {
         grid-template-columns: 1fr;
         margin-left: 5svw;
@@ -93,10 +117,6 @@ body {
         width: unset;
         aspect-ratio: 1.91/1;
         transform: translateX(0vw) !important;
-    }
-    .card:hover {
-        scale: 1;
-        z-index: 1;
     }
     .card:active {
         scale: 1;
